<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Movie Show</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="movie_image" translatable="false">Movie Image</string>
    <string name="title_activity_more" translatable="false">MoreActivity</string>
    <string name="title_activity_movie_details" translatable="false">MovieDetailsActivity</string>
    <string name="movie_details_image" translatable="false">Movie Details Image</string>
    <string name="movie_poster" translatable="false">Movie Poster</string>
    <string name="related_movies">Related Movies</string>
    <string name="genre">Genre</string>
    <string name="cast_image" translatable="false">Cast Image</string>
    <string name="now_playing">Now Playing</string>
    <string name="popular">Popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="production_countries">Production Countries</string>
    <string name="production_companies">Production Companies</string>
    <string name="budget">Budget</string>
    <string name="title_activity_extended_details" translatable="false">ExtendedDetailsActivity</string>
    <string name="gallery_image">Gallery Image</string>
    <string name="title_activity_gallery_preview" translatable="false">GalleryPreviewActivity</string>
    <string name="see_all">See all</string>
    <string name="trailer_image" translatable="false">Trailer Image</string>
    <string name="play">Play</string>
    <string name="search">Search</string>
    <string name="empty_text" translatable="false">--</string>
    <string name="died" tools:keep="@string/died">Died %1$s</string>
    <string name="images">Images</string>
    <string name="videos">Videos</string>
    <string name="tagline">Tagline</string>
    <string name="airing_today">Airing Today</string>
    <string name="title_activity_tvdetails" translatable="false">TVDetailsActivity</string>
    <string name="first_air_date">First Air Date</string>
    <string name="last_air_date">Last Air Date</string>
    <string name="related_tv_shows">Related TV Shows</string>
    <string name="main_actors">Main actors</string>
    <string name="title_activity_episodes" translatable="false">EpisodesActivity</string>
    <string name="movies">Movies</string>
    <string name="tv_shows">TV Shows</string>
    <string name="number_of_votes">%1$s votes</string>
    <string name="number_of_votes_enclosed">(%1$s votes)</string>
    <string name="vote_average_over_ten" translatable="false">%1$.1f/10</string>
    <string name="comment_rating" translatable="false">%1$d/10</string>
    <string name="season_number">Season %1$s</string>
    <string name="episode_number">Episode %1$s</string>
    <string name="episodes_number">%1$s Episodes</string>
    <string name="number_of_seasons">%1$s Seasons</string>
    <string name="advanced_search">Advanced Search</string>
    <string name="discover">Discover</string>
    <string name="guest_stars">Guest Stars</string>
    <string name="empty_results">No results found</string>
    <string name="you_are_offline">You are offline</string>
    <string-array name="years">
        <item>Unknown</item>
        <item>2022</item>
        <item>2021</item>
        <item>2020</item>
        <item>2019</item>
        <item>2018</item>
        <item>2017</item>
        <item>2016</item>
        <item>2015</item>
        <item>2014</item>
        <item>2013</item>
        <item>2012</item>
        <item>2011</item>
        <item>2010</item>
        <item>2009</item>
        <item>2008</item>
        <item>2007</item>
        <item>2006</item>
        <item>2005</item>
        <item>2004</item>
        <item>2003</item>
        <item>2002</item>
        <item>2001</item>
        <item>2000</item>
        <item>1999</item>
        <item>1998</item>
        <item>1997</item>
        <item>1996</item>
        <item>1995</item>
        <item>1994</item>
        <item>1993</item>
        <item>1992</item>
        <item>1991</item>
        <item>1990</item>
        <item>1989</item>
        <item>1988</item>
        <item>1987</item>
        <item>1986</item>
        <item>1985</item>
        <item>1984</item>
        <item>1983</item>
        <item>1982</item>
        <item>1981</item>
        <item>1980</item>
        <item>1979</item>
        <item>1978</item>
        <item>1977</item>
        <item>1976</item>
        <item>1975</item>
        <item>1974</item>
        <item>1973</item>
        <item>1972</item>
        <item>1971</item>
        <item>1970</item>
        <item>1969</item>
        <item>1968</item>
        <item>1967</item>
        <item>1966</item>
        <item>1965</item>
        <item>1964</item>
        <item>1963</item>
        <item>1962</item>
        <item>1961</item>
        <item>1960</item>
        <item>1959</item>
        <item>1958</item>
        <item>1957</item>
        <item>1956</item>
        <item>1955</item>
        <item>1954</item>
        <item>1953</item>
        <item>1952</item>
        <item>1951</item>
        <item>1950</item>
    </string-array>
    <string-array name="rating">
        <item>Rating</item>
        <item>Unknown</item>
        <item>At least 10</item>
        <item>At least 9</item>
        <item>At least 8</item>
        <item>At least 7</item>
        <item>At least 6</item>
        <item>At least 5</item>
        <item>At least 4</item>
        <item>At least 3</item>
        <item>At least 2</item>
        <item>At least 1</item>
    </string-array>
    <string-array name="rating_text">
        <item>Hate it!</item>
        <item>Terrible :(</item>
        <item>Bad</item>
        <item>Poor</item>
        <item>Meh</item>
        <item>Fair</item>
        <item>Good</item>
        <item>Great</item>
        <item>Superb</item>
        <item>Loved it!</item>
    </string-array>
    <string name="sort">Sort</string>
    <string name="title_activity_reviews" translatable="false">ReviewsActivity</string>
    <string name="title_activity_web_view" translatable="false">TMDb</string>
    <string name="about">About</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <plurals name="worked_on" tools:keep="@plurals/worked_on">
        <item quantity="one">Worked on 1 movie/show</item>
        <item quantity="other">Worked on %d movies/shows</item>
    </plurals>
    <string name="rate">Rate</string>
    <string name="watchlist">Watchlist</string>
    <string name="sign_out">Sign Out</string>
    <string name="rated">Rated</string>
    <string name="cancel">Cancel</string>
    <string name="favourites">Favourites</string>
    <string name="sign_in">Sign In</string>
    <string name="welcome_user">Welcome %1$s</string>
    <string name="contact_us">Contact Us</string>
    <string name="revenue">Revenue</string>
    <string name="title_activity_more_shows" translatable="false">MoreShowsActivity</string>
    <string name="popular_people">Popular People</string>
    <string name="your_lists">Your Lists</string>
    <string name="create_list">Create List</string>
    <string name="name">Name</string>
    <string name="create">Create</string>
    <string-array name="genres_images" translatable="false">
        <item>http://resources.movieshow-app.com/genre/images/action.jpg</item>
        <item>http://resources.movieshow-app.com/genre/images/adventure.jpg</item>
        <item>http://resources.movieshow-app.com/genre/images/animation.jpg</item>
        <item>http://resources.movieshow-app.com/genre/images/comedy.jpg</item>
        <item>http://resources.movieshow-app.com/genre/images/crime.jpg</item>
        <item>http://resources.movieshow-app.com/genre/images/documentary.jpg</item>
        <item>http://resources.movieshow-app.com/genre/images/drama.jpg</item>
        <item>http://resources.movieshow-app.com/genre/images/family.jpg</item>
        <item>http://resources.movieshow-app.com/genre/images/fantasy.jpg</item>
        <item>http://resources.movieshow-app.com/genre/images/history.jpg</item>
        <item>http://resources.movieshow-app.com/genre/images/horror.jpg</item>
        <item>http://resources.movieshow-app.com/genre/images/music.jpg</item>
        <item>http://resources.movieshow-app.com/genre/images/mystery.jpg</item>
        <item>http://resources.movieshow-app.com/genre/images/romance.jpg</item>
        <item>http://resources.movieshow-app.com/genre/images/science_fiction.jpg</item>
        <item>http://resources.movieshow-app.com/genre/images/thriller.jpg</item>
        <item>http://resources.movieshow-app.com/genre/images/tv_movie.jpg</item>
        <item>http://resources.movieshow-app.com/genre/images/war.jpg</item>
        <item>http://resources.movieshow-app.com/genre/images/western.jpg</item>
    </string-array>
    <string-array name="advanced_search_types">
        <item>Movie</item>
        <item>TV Show</item>
    </string-array>
    <string name="tap_watchlist">Tap on this icon @ to add the movies to your watchlist.</string>
    <string name="tap_favourites">Tap on this icon @ to add the movies to your favourites.</string>
    <string name="tap_rated">Tap on this icon @ to rate movies and add them to your list.</string>
    <string name="sync">Sync</string>
    <string name="seasons">Seasons</string>
    <string name="keep_track_of_everything">Keep track of everything</string>
    <string name="browsing_lists_watch">While browsing the movie list, you can add them directly to your watchlist.</string>
    <string name="browsing_lists_favourites">While browsing the movie list, you can add them directly to your favourites.</string>
    <string name="browsing_lists_rated">While browsing the movie list, you can rate them directly.</string>
    <string name="browsing_lists_list">While browsing the movie list, you can add them directly to any of your lists.</string>
    <string name="give_it_a_try">Give it a try</string>
    <string name="clear">Clear</string>
    <string name="title_activity_company" translatable="false">CompanyActivity</string>
    <string name="tap_add_list">Tap on this icon @ or button below to add the movies to any of your lists.</string>
    <string name="add_to_list">Add to list</string>
    <string name="share">Share</string>
    <string name="next">Next</string>
    <string name="remove_favourite">Remove from favourites</string>
    <string name="favorite_image">Favourite Image</string>
    <string name="image">Image</string>
    <string name="watchlist_icon">Watchlist Icon</string>
    <string name="home">Home</string>
    <string name="no_search_results">No search results</string>
    <string name="try_again">Please try again</string>
    <string name="there_are_no_lists">There are no lists available</string>
    <string name="tap_button_below_to_add_new_list">Tap button below to add new list</string>
    <string name="description">Description</string>
    <string name="settings">Settings</string>
    <string name="reload">Reload</string>
    <string name="looks_like_no_connection">Looks like you\'re not connected. Never mind, just hit Settings to enable your connection.</string>
    <string name="global">Global</string>
    <string name="people">People</string>
    <string name="companies">Companies</string>
    <string name="collections">Collections</string>
    <string name="keywords">Keywords</string>
    <string name="apps">Apps</string>
</resources>