<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@+id/toolbar"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.gdevelopers.movies.activities.SearchActivity"
    tools:showIn="@layout/activity_search">

    <androidx.cardview.widget.CardView
        android:id="@+id/type_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="3dp"
        app:contentPaddingLeft="5dp">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/search_type_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            app:chipSpacing="10dp"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/firstChip"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="0"
                android:text="@string/global"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

            <com.google.android.material.chip.Chip xmlns:android="http://schemas.android.com/apk/res/android"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="1"
                android:text="@string/movies"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

            <com.google.android.material.chip.Chip xmlns:android="http://schemas.android.com/apk/res/android"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="2"
                android:text="@string/tv_shows"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

            <com.google.android.material.chip.Chip xmlns:android="http://schemas.android.com/apk/res/android"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="3"
                android:text="@string/people"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

            <com.google.android.material.chip.Chip xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/companiesChip"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="false"
                android:text="@string/companies"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

            <com.google.android.material.chip.Chip xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/collectionsChip"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="false"
                android:text="@string/collections"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

            <com.google.android.material.chip.Chip xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/keywordsChip"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="false"
                android:text="@string/keywords"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

        </com.google.android.material.chip.ChipGroup>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/empty_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/image"
            android:src="@drawable/ic_empty_search" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/no_search_results"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/try_again"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminate="true"
        android:indeterminateBehavior="repeat"
        android:visibility="gone" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/search_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/type_card" />

</RelativeLayout>
