<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/offline_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="50dp"
    android:visibility="gone">

    <com.tolstykh.textviewrichdrawable.TextViewRichDrawable
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableTop="@drawable/ic_signal_wifi_off_white_24dp"
        android:drawablePadding="30dp"
        android:text="@string/you_are_offline"
        android:textColor="@android:color/white"
        app:compoundDrawableHeight="70dp"
        app:compoundDrawableWidth="70dp" />

    <TextView
        style="@style/TextAppearance.MaterialComponents.Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:lineSpacingExtra="2dp"
        android:text="@string/looks_like_no_connection"
        android:textColor="@android:color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/reload"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reload" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/settings"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:text="@string/settings" />
    </LinearLayout>
</LinearLayout>