<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/empty_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginStart="10dp"
        android:visibility="gone"
        app:cardBackgroundColor="#617D8A"
        app:cardCornerRadius="3dp"
        app:cardElevation="3dp">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="end"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/image"
            android:rotation="180"
            android:src="@drawable/ic_action_lamp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/keep_track_of_everything"
                    android:textColor="@android:color/white" />

                <TextView
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:lineSpacingExtra="2.0dp"
                    android:text="@string/browsing_lists_list"
                    android:textColor="#EEEEEE" />

                <TextView
                    android:id="@+id/add_watchlist"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="20dp"
                    android:lineSpacingExtra="2.0dp"
                    android:text="@string/tap_add_list"
                    android:textColor="#EEEEEE" />

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/try_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/bottom_drawable"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:id="@+id/textView1"
                    style="@style/Base.TextAppearance.AppCompat.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/give_it_a_try"
                    android:textColor="#EEEEEE" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_toEndOf="@+id/textView1"
                    android:layout_toRightOf="@+id/textView1"
                    android:contentDescription="@string/image"
                    android:rotation="180"
                    android:src="@drawable/ic_action_arrow" />

                <ImageView
                    android:id="@+id/watchlist_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:clickable="true"
                    android:contentDescription="@string/watchlist_icon"
                    android:src="@drawable/ic_action_list_add"
                    android:focusable="true" />

            </RelativeLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:indeterminateBehavior="repeat" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_details"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>